# msplat

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md  run_test.py  setup.py  test_exp
DifferentiablePointRender/: CMakeLists.txt  __init__.py
DifferentiablePointRender/GaussianSplatting/: __init__.py  alpha_blending.py  compute_cov3d.py  compute_sh.py  ewa_project.py  project_point.py  sort_gaussian.py
DifferentiablePointRender/GaussianSplatting/include/: alpha_blending.h  compute_cov3d.h  compute_cov3d_kernel.h  compute_sh.h  compute_sh_kernel.h  config.h  ewa_project.h  ewa_project_kernel.h  project_point.h  project_point_kernel.h  sort_gaussian.h  utils.h
DifferentiablePointRender/GaussianSplatting/src/: alpha_blending.cu  compute_cov3d.cpp  compute_cov3d_kernel.cu  compute_sh.cpp  compute_sh_kernel.cu  ewa_project.cpp  ewa_project.cu  ewa_project_kernel.cu  ext.cpp  project_point.cpp  project_point.cu  project_point_kernel.cu  sort_gaussian.cu
GS_Split/: CMakeLists.txt  __init__.py  setup.py
GS_Split/GS_Split/: __init__.py
GS_Split/include/: sh.h
GS_Split/src/: preprocess.cu  render.cu
dptr/gs/: __init__.py  (+6 more)
include/: auxiliary.h  rasterizer_impl.h  render.h
msplat/: __init__.py  alpha_blending.py  compute_cov3d.py  compute_sh.py  ewa_project.py  project_point.py  sort_gaussian.py
org/: README.md  setup.py
src/: cov.cu  ext.cpp  preprocess.cu  render.cu  sh.cu
test/: test_alpha_blending.py  test_alpha_blending_cuda.py  test_compute_cov3d.py  test_compute_sh.py  test_ewa_project.py  test_project_points.py  test_sort_gaussian.py
tutorials/: gs.py  gs_2d.py  gs_3d.py
(+52 files in other folders)
